--- a/sass/theme/parts/modules/_form_selector_wizard.scss
+++ b/sass/theme/parts/modules/_form_selector_wizard.scss
@@ -67,7 +67,7 @@
 // WIZARD PLACE
 
 .wizard-multi-place {
-  padding: 0 1rem;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .wizard-multi-place_selectors {
